Fix some z-index issues and some position problems for search bar and echo

--- a/components/navigation.less
+++ b/components/navigation.less
@@ -26,7 +26,7 @@
 	min-width: 100%;
 	position: fixed;
 	top: 0px;
-	z-index: 1;
+	z-index: 3;
 }
 
 #mw-head-base {
@@ -44,7 +44,7 @@ div#mw-head {
 	position: fixed;
 	top: 0;
 	min-width: 100%;
-	z-index: 1;
+	z-index: 3;
 
 	h5 {
 		margin: 0;
