--- a/components/search.less
+++ b/components/search.less
@@ -112,6 +112,10 @@ div#simpleSearch {
 
 /* Custom */
 
+.suggestions {
+	position: fixed !important;
+}
+
 /* Search */
 #p-searchSearch {
 	/* @noflip */
